--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
   
   <header class="header">
     <div class="header__wrapper container">
-      <span class="header__info">Каталог</span>
+      <span class="header__info">Catalog</span>
 
       <a class="header__logo" href="#">
         <img src="img/logo.png" alt="Логотип интернет магазина Технозавррр" width="55" height="55"><p style="color:white">ECO Clothes</p>
@@ -40,7 +40,7 @@
       <ul class="footer__links">
         <li>
           <a class="footer__link" href="#">
-            Каталог
+            Catalog
           </a>
         </li>
         <li>
@@ -50,12 +50,12 @@
         </li>
         <li>
           <a class="footer__link" href="mailto:hi@technozavrrr.com">
-            hi@technozavrrr.com
+            hi@ecoclothes.com
           </a>
         </li>
         <li>
           <a class="footer__link" href="#">
-            Распродажа
+            Sales
           </a>
         </li>
         <li>
